# atlys

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: constants.py  db.py  main.py  models.py  notification.py  scraper.py  utils.py
